add first paragraph

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,6 @@
         <body>
             <h1>MY PORTFOLIO</h1>
             <img src = "images/me.jpg" alt = "an image that represents me">
-            <h2>Loyce Njoroge(mimo)s</h2>
+            <h2>Loyce Njoroge(mimo)</h2>
         </body>
 </html>
