add initial unordered list

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,13 @@
         </head>
         <body>
             <h1>MY PORTFOLIO</h1>
-            <img src = "images/me.jpg" alt = "an image that represents me">
+               <img src = "images/me.jpg" alt = "an image that represents me">
             <h2>Loyce Njoroge(mimo)</h2>
+            <h3>my projects</h3>
+               <p>in one week i have been able to succefully create the following projects.</p>
+               <ul>
+                   <li><a href ="https://github.com/loycemimo/hello-world-2.git">hello world 2</a></li>
+                   <li><a href ="https://github.com/loycemimo/hello-world.git">hello world</a></li>
+               </ul>
         </body>
 </html>
