add about me paragraph

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,23 @@
         <body>
             <h1>MY PORTFOLIO</h1>
                <img src = "images/me.jpg" alt = "an image that represents me">
-            <h2>Loyce Njoroge(mimo)</h2>
-            <h3>my projects</h3>
-               <p>in one week i have been able to succefully create the following projects.</p>
+            <h2>Loyce Njoroge</h2>
+            <h3>My Projects</h3>
+               <p>In one week i have been able to succefully create the following projects.</p>
                <ul>
                    <li><a href ="https://github.com/loycemimo/hello-world-2.git">hello world 2</a></li>
                    <li><a href ="https://github.com/loycemimo/hello-world.git">hello world</a></li>
                </ul>
+               <h4>About Me</h4>
+               <p> Professionally i am a mechanical engineer.i studied mechanical and a bit of electrical 
+                   that was in relation to my field.In engineering there is a meshing of fields known as 
+                   mechatronics which marries mechanical,electrical and computer science.You see most machines
+                   need electricity and electronic circuits.These days all systems are going smart that is 
+                   they need computer science.for example robots,elevators,digitally controlled combustion 
+                   engines,electronic cars.<strong>Everything!</strong>.Basically machines need software.This 
+                   is why i decided to take this program.
+               </p>
+               <p></p>
+
         </body>
 </html>
